Fix CSS overflow issue and cleaned up css

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  background-image: radial-gradient(#67f0c3 2px, transparent 1px);
+  background-size: 45px 45px;
+  background-color: #a589f3;
+}
+
 .app-container {
   height: 100vh;
   width: 100vw;
@@ -5,27 +11,4 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  background-image: radial-gradient(#67f0c3 2px, transparent 1px);
-  background-size: 45px 45px;
-  background-color: #a589f3;
-}
-
-.bot-wrapper {
-  padding-right: 1rem;
-  padding-left: 1rem;
-  width: 700px;
-}
-
-/* between tablet and mobile */
-@media screen and (max-width: 521px) {
-  .bot-wrapper {
-    width: 430px;
-  }
-}
-
-/* laptop */
-@media screen and (min-width: 1024px) {
-  .bot-wrapper {
-    width: 520px;
-  }
 }
